# Meshtastic-nRF54L15-LR2021-Multi-SF

./: .gitignore  README.md  SETUP.md  THIRD_PARTY_LICENSES  robot_output.xml
.clusterfuzzlite/: Dockerfile  README.md  platformio-clusterfuzzlite-pre.py  shadow_channels_fuzzer.cpp  shadow_channels_fuzzer.options  shadow_channels_fuzzer_seed_corpus.py
docs/: HARDWARE_BUILD.md  NRF54L15_PORT.md
lib/Crypto/: RNG.cpp
lib/RadioLib/src/: BuildOptUser.h  RadioLib.h  RadioLibHal_Zephyr.cpp  RadioLibHal_Zephyr.h
lib/RadioLib/src/modules/LR11x0/: LR_common.cpp
lib/RadioLib/src/modules/LR2021/: LR2021.cpp  LR2021.h  LR2021_cmds_lora.cpp  LR2021_cmds_radio.cpp  LR2021_config.cpp
src/: DebugConfiguration.h  FSCommon.h  PowerFSM.cpp  RedirectablePrint.cpp  SerialConsole.cpp  main.cpp  sleep.cpp  xmodem.h
src/buzz/: buzz.cpp
src/concurrency/: BinarySemaphoreZephyr.cpp  BinarySemaphoreZephyr.h  InterruptableDelay.h  OSThread.cpp
src/detect/: ScanI2C.h
src/input/: ButtonThread.h  InputBroker.cpp
src/mesh/: Channels.cpp  LR2021Interface.cpp  LR2021Interface.h  MemoryPool.h  MeshModule.cpp  MeshPacketQueue.h  MeshService.cpp  MeshService.h  MeshTypes.h  MultiSFBeaconer.cpp  MultiSFBeaconer.h  MultiSFBridge.cpp  MultiSFBridge.h  NextHopRouter.cpp  NodeDB.cpp  NodeSFTracker.cpp  NodeSFTracker.h  PacketHistory.cpp  PhoneAPI.cpp  RadioInterface.cpp  RadioLibInterface.h  Router.cpp  ShadowChannels.cpp  ShadowChannels.h  mesh-pb-constants.h
src/modules/: CannedMessageModule.cpp  Modules.cpp  ReplyBotModule.cpp  StoreForwardModule.cpp
src/platform/nrf54l15/: AES.h  Arduino.h  BigNumberUtil.h  CTR.h  Crypto.h  Curve25519.h  DebugConfiguration.h  ErriezCRC32.h  FSCommon.h  Fsm.h  Hash.h  MeshPacketQueue_zephyr.cpp  NRF54L15CryptoEngine.cpp  NonBlockingRtttl.h  OLEDDisplay.cpp  OLEDDisplay.h  OLEDDisplayFonts.cpp  OLEDDisplayFonts.h  OLEDDisplayUi.cpp  OLEDDisplayUi.h  OneButton.h  Print.cpp  Print.h  RNG.h  RadioLib.h  SHA256.h  SPI.h  SSD1306Wire.cpp  SSD1306Wire.h  Stream.h  Thread.h  ThreadController.h  TinyGPS++.h  Tone.h  ZephyrFS.cpp  ZephyrFS.h  aes_impl.c  algorithm  architecture.h  arduino_compat.h  (+40 more)
src/platform/nrf54l15/hal/Arduino/: ArduinoHal.cpp  ArduinoHal.h
src/platform/nrf54l15/power/: PowerHAL.h
variants/nrf54l15/xiao_nrf54l15/: variant.h
zephyr/: 99-xiao-nrf54l15.rules  CMakeLists.txt  Kconfig  prj.conf  prj_hardware.conf
zephyr/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay  xiao_nrf54l15_nrf54l15_cpuapp_hardware.overlay
zephyr/dts/bindings/: seeed,lr2021.yaml
